<resources>
    <string name="app_name">WeatherProject</string>
    <string name="sun_rise">Sun Rise</string>
    <string name="sun_set">Sun Set</string>
    <string name="could">Could</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="feel">Feel</string>
    <string name="rain">Rain</string>
    <string name="presure">Presure</string>
    <string name="foresight">Foresight</string>
    <string name="uv">UV</string>
    <string name="error">Something went wrong</string>
    <string name="back">Back</string>search
    <string name="findcity">Input name of city</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="night">Night</string>
    <string name="eve">Even</string>
    <string name="morn">Morn</string>
    <string name="loading">Loading</string>
    <string name="menuTitle1">Explore other cities</string>
    <string name="menuTitle2">Setting</string>
    <string name="menuTitle3">Option</string>
    <string name="btnFindCity">City Search</string>
    <string name="btnFlCity">Cities Follow</string>
    <string name="btnSetting">Setting</string>
    <string name="btnRate">Rate</string>
    <string name="btnContact">Contact</string>
    <string name="btnClose">Exit</string>
    <string name="success">Success</string>
    <string name="cityFl">The city is watching</string>
    <string name="citySearch">City search</string>
    <string name="err1">Tracking is limited to 10 cities!</string>
    <string name="err2">Already follow this city!</string>
    <string name="addsuc">More success!</string>
    <string name="noti">Notification</string>
    <string name="unFl">Do you want to unfollow this city?</string>
    <string name="delCity">Delete successfully</string>
    <string name="pref1">Select display language</string>
    <string name="pref2">Language</string>
    <string name="pref3">Get weather alerts</string>
    <string name="pref4">Choose a color</string>
    <string name="pref5">Color</string>
    <string name="set">Language update successful</string>
    <string name="net">Dữ liệu di động đã bị tắt</string>
    <string name="lang">Language</string>
    <string name="color">Color</string>
    <string name="contact1">Application designed by group 6</string>
    <string name="contact2">Great exercise for mobile device programming</string>
    <string name="contact3">Contact Info :</string>
    <string name="set2">Change color successful, please restart the app</string>
    <string name="noti1">Good morning dear</string>
    <string name="noti2">Let see today weather</string>
</resources>