<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:summary="@string/lang"
        android:title="@string/lang" >
        <ListPreference
            android:entries="@array/listValuesLang"
            android:entryValues="@array/listKeyLang"
            android:key="listLang"
            android:summary="@string/pref1"
            android:title="@string/pref2" />
    </PreferenceCategory>
<!--    <PreferenceCategory-->
<!--        android:summary="Notification"-->
<!--        android:title="Notification" >-->
<!--        <SwitchPreference-->
<!--            android:key="checkBox"-->
<!--            android:summary="On/Off"-->
<!--            android:title="@string/pref3" />-->
<!--    </PreferenceCategory>-->
    <PreferenceCategory
        android:summary="@string/color"
        android:title="@string/color">
        <ListPreference
            android:entries="@array/listKeyColor"
            android:entryValues="@array/listValuesColor"
            android:key="listColor"
            android:summary="@string/pref4"
            android:title="@string/pref5" />
    </PreferenceCategory>
</PreferenceScreen>