<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:padding="15dp"
        android:background="@drawable/boxsetting">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/dateTimeInfo"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30dp"/>
                <TextView
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_width="match_parent"
                    android:background="@color/black"
                    android:layout_height="1dp"/>
                <TextView
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:id="@+id/mainInfo"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:textSize="25dp" />
            </LinearLayout>
            <TextView
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_width="1dp"
                android:background="@color/black"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_weight="1"
                android:id="@+id/tempInfo"
                android:padding="3dp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:layout_height="match_parent"
                android:textSize="70dp" />
        </LinearLayout>
        <TextView
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:background="@color/black"
            android:layout_height="1dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:padding="3dp"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/min"/>
                <TextView
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_width="match_parent"
                    android:background="@color/black"
                    android:layout_height="1dp"/>
                <TextView
                    android:id="@+id/minTempInfo"
                    android:padding="3dp"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="25dp" />
            </LinearLayout>
            <TextView
                android:layout_width="1dp"
                android:background="@color/black"
                android:textColor="@color/white"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:padding="3dp"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/max"/>
                <TextView
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_width="match_parent"
                    android:background="@color/black"
                    android:layout_height="1dp"/>
                <TextView
                    android:id="@+id/maxTempInfo"
                    android:padding="3dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25dp" />
            </LinearLayout>
            <TextView
                android:layout_width="1dp"
                android:background="@color/black"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:padding="3dp"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/night"/>
                <TextView
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_width="match_parent"
                    android:background="@color/black"
                    android:layout_height="1dp"/>
                <TextView
                    android:id="@+id/NightTempInfo"
                    android:padding="3dp"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="25dp" />
            </LinearLayout>
            <TextView
                android:layout_width="1dp"
                android:background="@color/black"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:padding="3dp"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/eve"/>
                <TextView
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_width="match_parent"
                    android:background="@color/black"
                    android:layout_height="1dp"/>
                <TextView
                    android:id="@+id/EveTempInfo"
                    android:padding="3dp"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="25dp" />
            </LinearLayout>
            <TextView
                android:layout_width="1dp"
                android:background="@color/black"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:padding="3dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/morn"/>
                <TextView
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:background="@color/black"
                    android:layout_height="1dp"/>
                <TextView
                    android:id="@+id/MornTempInfo"
                    android:padding="3dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>